--- a/src/app/pages/agregar-actividad/agregar-actividad.component.html
+++ b/src/app/pages/agregar-actividad/agregar-actividad.component.html
@@ -8,16 +8,16 @@
     <form [formGroup]="actividadForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="nombre">Nombre</label>
-        <input type="text" class="form-control" id="nombre" formControlName="nombre" required>
+        <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre de la actividad">
       </div>
-      <div class="form-group">
-        <label for="foto">Foto</label>
-        <input type="text" class="form-control" id="foto" formControlName="foto">
-      </div>
+      <div class="mb-3">
+        <label for="foto" class="form-label">Imagen del Producto</label>
+        <input (change)="onFileSelect($event.target)" type="file" class="form-control">
+    </div>
       <div class="form-group">
         <label for="descripcion">Descripción</label>
-        <textarea class="form-control" id="descripcion" formControlName="descripcion" required></textarea>
+        <textarea class="form-control" id="descripcion" formControlName="descripcion" placeholder="Descripcion de la actividad"></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Guardar</button>
+      <button type="submit" class="btn btn-rojo">Registrar Actividad</button>
     </form>
   </div>
