--- a/src/app/pages/agregar-evento/agregar-evento.component.html
+++ b/src/app/pages/agregar-evento/agregar-evento.component.html
@@ -5,5 +5,40 @@
     <h1 class="mt-5 mb-3 text-center">Agregar Evento</h1>
 </div>
 <div class="container">
-    Aqui formulario
+    <form [formGroup]="eventoForm" (ngSubmit)="onSubmit()">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="Nombre del Evento">
+        </div>
+        <div class="row mb-3">
+            <div class="col">
+                <label for="fechaInicio" class="form-label">Fecha de Inicio</label>
+                <input type="date" class="form-control" id="fechaInicio" formControlName="fechaInicio">
+              </div>
+              <div class="col">
+                <label for="fechaFin" class="form-label">Fecha de Fin</label>
+                <input type="date" class="form-control" id="fechaFin" formControlName="fechaFin">
+              </div>
+        </div>
+        <div class="mb-3">
+            <label for="foto" class="form-label">Imagen del Producto</label>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
+        </div>
+        <div class="row mb-3">
+            <div class="col">
+                <label for="latitud" class="form-label">Latitud</label>
+                <input type="text" class="form-control" id="latitud" formControlName="latitud" placeholder="Latitud">
+              </div>
+              <div class="col">
+                <label for="longitud" class="form-label">Longitud</label>
+                <input type="text" class="form-control" id="longitud" formControlName="longitud" placeholder="Longitud">
+              </div>
+        </div>
+        <div class="mb-3">
+          <label for="descripcion" class="form-label">Descripción</label>
+          <textarea class="form-control" id="descripcion" formControlName="descripcion" placeholder="Descripcion"></textarea>
+        </div>
+        <button type="submit" class="btn btn-rojo">Registrar Evento</button>
+      </form>
+      
 </div>
