--- a/src/app/pages/agregar-productor/agregar-productor.component.html
+++ b/src/app/pages/agregar-productor/agregar-productor.component.html
@@ -5,5 +5,36 @@
     <h1 class="mt-5 mb-3 text-center">Agregar Productor</h1>
 </div>
 <div class="container">
-    Aqui formulario
+    <form [formGroup]="productorForm" (ngSubmit)="onSubmit()">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="nombre" formControlName="nombre" required>
+        </div>
+        <div class="mb-3">
+          <label for="apellidoPaterno" class="form-label">Apellido Paterno</label>
+          <input type="text" class="form-control" id="apellidoPaterno" formControlName="apellidoPaterno" required>
+        </div>
+        <div class="mb-3">
+          <label for="apellidoMaterno" class="form-label">Apellido Materno</label>
+          <input type="text" class="form-control" id="apellidoMaterno" formControlName="apellidoMaterno">
+        </div>
+        <div class="mb-3">
+          <label for="correo" class="form-label">Correo</label>
+          <input type="email" class="form-control" id="correo" formControlName="correo" required>
+        </div>
+        <div class="mb-3">
+          <label for="telefono" class="form-label">Teléfono</label>
+          <input type="tel" class="form-control" id="telefono" formControlName="telefono">
+        </div>
+        <div class="mb-3">
+          <label for="usuario" class="form-label">Usuario</label>
+          <input type="text" class="form-control" id="usuario" formControlName="usuario" required>
+        </div>
+        <div class="mb-3">
+          <label for="contrasenia" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="contrasenia" formControlName="contrasenia" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+      </form>
+      
 </div>
