--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -2,5 +2,5 @@
     <span>.</span>
 </div>
 <div class="container">
-    <h1 class="mt-5 mb-3 text-center">Eventos</h1>
+    <h1 class="mt-5 mb-3 text-center">Eventos a</h1>
 </div>
