--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -28,7 +28,8 @@
         <th>Estatus</th>
         <th>Precio</th>
         <th>Stock</th>
-        <th>Actualizar</th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -39,9 +40,92 @@
         <td>{{ list.precio }}</td>
         <td>{{ list.stock }}</td>
         <td>
-          <button class="btn btn-rojo">Actualizar</button>
+          <button class="btn btn-rojo" (click)="buscar(list.id)" data-bs-toggle="modal"
+            data-bs-target="#exampleModal">Actualizar</button>
+        </td>
+        <td>
+          <button class="btn btn-rojo" (click)="buscar(list.id)" data-bs-toggle="modal"
+            data-bs-target="#eliminar">Eliminar</button>
         </td>
       </tr>
     </tbody>
   </table>
+</div>
+<!-- Modal para actualizar -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Actualizar</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formulario" (ngSubmit)="submitForm()" enctype="multipart/form-data">
+          <div class="row mb-3">
+            <div class="col">
+              <label for="nombre" class="form-label">Nombre del Producto</label>
+              <input type="text" formControlName="nombre" class="form-control" id="nombre"
+                placeholder="Nombre del producto">
+            </div>
+            <div class="col">
+              <label for="nivel" class="form-label">Nivel de Madurez</label>
+              <input type="text" class="form-control" formControlName="nivel" id="nivel" placeholder="Nivel de Madurez">
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div class="col">
+              <label for="stock" class="form-label">Stock</label>
+              <input type="number" class="form-control" formControlName="stock" id="stock"
+                placeholder="Cantidad en stock">
+            </div>
+            <div class="col">
+              <label for="precio" class="form-label">Precio</label>
+              <input type="number" class="form-control" formControlName="precio" id="precio"
+                placeholder="Precio del producto">
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="descripcion" class="form-label">Descripción</label>
+            <textarea class="form-control" formControlName="descripcion" id="descripcion" rows="4"
+              placeholder="Descripción del producto"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="foto" class="form-label">Imagen del Producto</label>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="estatus" class="form-label">Estatus</label>
+            <select class="form-select" formControlName="estatus" id="estatus">
+              <option value="1">Activo</option>
+              <option value="2">Desactivado</option>
+            </select>
+          </div>
+          <div>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Actualizar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal para eliminar -->
+<div class="modal fade" id="eliminar" tabindex="-1"
+  aria-labelledby="eliminar" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="eliminar">Eliminar</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Estas seguro de eliminar {{ nombreProducto }}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="eliminar()">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
