Agregar el punto de venta

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -34,6 +34,7 @@
                         <li><a class="dropdown-item" (click)="agregarProducto()">Producto</a></li>
                         <li><a class="dropdown-item" (click)="agregarActividad()">Actividad</a></li>
                         <li><a class="dropdown-item" (click)="agregarEvento()">Evento</a></li>
+                        <li><a class="dropdown-item" (click)="agregarPunto()">Punto de venta</a></li>
                         <li><a class="dropdown-item" (click)="agregarProductor()">Productor</a></li>
                     </ul>
                 </li>
