--- a/src/app/pages/actividades-admin/actividades-admin.component.html
+++ b/src/app/pages/actividades-admin/actividades-admin.component.html
@@ -2,7 +2,7 @@
   <span>.</span>
 </div>
 <div class="container">
-  <h1 class="mt-5 mb-3 text-center">Actividades Admin</h1>
+  <h1 class="mt-5 mb-3 text-center">Actividades</h1>
 </div>
 <div class="container mt-3">
   <table class="table table-hover">
@@ -53,7 +53,10 @@
           </div>
           <div class="mb-3">
             <label for="foto" class="form-label">Imagen del Producto</label>
-            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
+            <div class="text-center">
+              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(nombrefoto)" alt="Imagen por defecto" width="100">
+            </div>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control" id="foto">
           </div>
           <div class="form-group">
             <label for="descripcion">Descripción</label>
