Centrado en tablas

--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -28,22 +28,26 @@
         <th>Estatus</th>
         <th>Precio</th>
         <th>Stock</th>
+        <th>Imagen</th>
         <th></th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let list of lista" class="text-center">
-        <th>{{ list.id }}</th>
-        <th>{{ list.nombre }}</th>
-        <td>{{ list.estatus }}</td>
-        <td>{{ list.precio }}</td>
-        <td>{{ list.stock }}</td>
-        <td>
+      <tr *ngFor="let list of lista" >
+        <th class="text-center vertical_align">{{ list.id }}</th>
+        <th class="text-center vertical_align">{{ list.nombre }}</th>
+        <td class="text-center vertical_align">{{ list.estatus }}</td>
+        <td class="text-center vertical_align">{{ list.precio }}</td>
+        <td class="text-center vertical_align">{{ list.stock }}</td>
+        <td class="text-center vertical_align">
+          <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(list.foto)" alt="" class="img-table">
+        </td>
+        <td class="text-center vertical_align">
           <button class="btn btn-rojo" (click)="buscar(list.id)" data-bs-toggle="modal"
             data-bs-target="#exampleModal">Actualizar</button>
         </td>
-        <td>
+        <td class="text-center vertical_align">
           <button class="btn btn-rojo" (click)="buscar(list.id)" data-bs-toggle="modal"
             data-bs-target="#eliminar">Eliminar</button>
         </td>
